2016/07/03: IGAS v92
    1. Now the action buttons of the main bar would works well when been temporary shapeshifted.

2016/06/17: IGAS v91
    1. Fix the cooldown indicator display the number for blizzard's settings.

2016/06/17: IGAS v90
    1. Fix the frequent headlth and power for changing target.

2016/06/05: IGAS v89
    1. Update the stance cache when SPELL_CHANGES to fix the stance changed by talents.

2016/06/05: IGAS v88
    1. No longer clear the stance cache for some stance not work.

2016/06/04: IGAS v87
    1. Fix IFMana not hidden.

2016/06/03: IGAS v86
    1. Fix IFMana Error when unit not existed.

2016/06/03: IGAS v85
    1. No longer save wrapper in the wow's ui element to avoid some addons may save the whole ui element in saved variables.

2016/06/02: IGAS v84
    1. Fix drop down list not show.

2016/05/24: IGAS v83
    1. Use macro for spell action buttons, to avoid no use actions.
    2. Fix stance check.

2016/05/23: IGAS v82
    1. Recode the System.Widget.Unit.SmoothValue to provide more smooth effect.

2016/04/06: IGAS v80
    1. Fix CodeEditor's render for hex numbers.

2016/03/08: IGAS v79
    1. Fix ActionButton's vertex color for usable.
    2. Fix Mount ActionButton's activation.

2016/03/04: IGAS v78
    1. Spell Action button now support Draenor zone ability.

2016/03/03: IGAS v77
    1. Fix Task.NoCombatCall not works well.
    2. Fix Add/remove pet during combat would cause more unit frame to be shown.

2016/03/01: IGAS v76
    1. Fix List Each error.
    2. Fix raid panel's unit frame won't be hidden if the unit not existed.

2016/02/28: IGAS v75
    1. Use IList instead of IFIterator.

2016/02/28: IGAS v74
    1. Fix the Form's auto hide.

2016/02/27: IGAS v73
    1. Update for new PLoop Core.
    2. Fix spell range check for non-existed spell
    3. Imporve the auto-complete for codeeditor.

2015/09/04: IGAS v72
    1. Update for new PLoop Core.
    2. Update features for MultiLineTextBox.

2015/03/12: IGAS v71